# SoftwareEngineeringDesign

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
rust_space/: Cargo.toml  Rocket.toml  up.sql  写给开发者.md  项目结构说明.md
rust_space/.sqlx/: query-34096910bb7e9c3051677abfc1696d89a3ac5a62e0ec647fec39c45e4456fa50.json  query-3bf3df430fce3d4d6031d8f0305703d337d454fe2f88f87a8fcf2e7bd203187f.json  query-5ad64ef80fd7dc30e6af3c99344c0a481a33a21dfe94990aa142a469f9b18dbd.json  query-71a659896780bdf810eb01f2e0135c85bc77266b0954aaeaa35258b778f936f1.json  query-78ecd3bc5a999dc227a86556f0ce41065974104b735d96b3c5785480023bb60a.json  query-a621cd02b69dba4f08a5e33669ebf76f57ceccdf88883a8bdffcedd44fd9bae5.json  query-d56aa5f8fd73f28a6df267e35ae3a823b494da5117e62405d0aa4da28f3f313f.json  query-fd4e82621f24cf7b3f66a25d8ed62f747130ac6ccaae639f8487eaca2684b93d.json  query-fe2a04ef5b3ab8b9de81a583b8d1b56a7415c43b7b7f41aa384a0981b8682c0f.json
rust_space/docs/: rustjudge.md
rust_space/src/: db.rs  main.rs
rust_space/src/models/: blog.rs  mod.rs  problem.rs  test_case.rs  user.rs  video.rs
rust_space/src/routes/: auth.rs  blog.rs  judge.rs  mod.rs  problems.rs  video.rs
rust_space/static/: blog.html  index.html  script.js  style.css  video.html
